[package]
name = "openshield"
version = "0.1.0"
edition = "2024"

[dependencies]
wirefilter-engine = { git = "https://github.com/cloudflare/wirefilter.git", branch = "master", package = "wirefilter-engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
erased-serde = "0.4"
clap = { version = "4", features = ["derive"] }
pingora = { version = "0.8", features = ["proxy", "rustls"] }
async-trait = "0.1"
bytes = "1"
maxminddb = "0.27"
form_urlencoded = "1"
cookie = "0.18"
multer = "3"
futures = "0.3"
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.11"
signal-hook = "0.3"
prometheus = "0.13"
lazy_static = "1"
http = "1"
ip_network_table = "0.2"
ip_network = "0.4"
regex = "1"
libinjectionrs = "0.1"
chrono = "0.4"
base64 = "0.22"
mimalloc = "0.1"
pingora-limits = "0.8"
uuid = { version = "1.23.0", features = ["v4"] }
sha1 = "0.11.0"
html-escape = "0.2.13"
